<resources>
    <string name="app_name">Age in Minutes Calculator</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In minutes till date</string>
    <string name="select_date_btn">Select Date</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="selection_done">Selection done</string>
</resources>