<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_Calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:layout_marginTop="36dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:background="@color/textBlue"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_InMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DD/MM/YYYY"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_SelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="@color/selectedDayColor"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_Minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/textBlue"
        android:textSize="35sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_UntilToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes_till_date"
        android:textColor="@color/selectedDayColor"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDateSelect"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/bgButtonColor"
        android:text="@string/select_date_btn"
        android:textSize="18sp" />


</LinearLayout>